# Media-Sync

./: .gitignore  README.md  pyproject.toml
src/mediasync/: __init__.py  __main__.py  cli.py
